TEST_PROGRAMS/INVALID/08/badAssign.go
package main;

func main(){
    x[a]+1, y = 0, 1;
}
